fix a problem where an overflowed `pre` causing wrong `ias` width

--- a/assets/src/scss/ias-wrapper.scss
+++ b/assets/src/scss/ias-wrapper.scss
@@ -1,6 +1,8 @@
 @import "./mixins/breakpoints.scss";
 
 #ias-wrapper{
+  width: 100%;
+
   .ia-header {
     margin-bottom: 30px;
   }
